// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Number.vue matches snapshot 1`] = `
<div
  class="number number--color-undefined"
>
  <div
    class="number__value"
  />
   
  <div
    class="number__label"
  />
</div>
`;

exports[`Number.vue matches snapshot with slot value number 1`] = `
<div
  class="number number--color-undefined"
>
  <div
    class="number__value"
  >
    2000
  </div>
   
  <div
    class="number__label"
  />
</div>
`;

exports[`Number.vue matches snapshot with slots 1`] = `
<div
  class="number number--color-undefined"
>
  <div
    class="number__value"
  >
    2000
  </div>
   
  <div
    class="number__label"
  >
    Visitors
  </div>
</div>
`;
